# tmux-anka

./: Cargo.toml  README.md  anka.tmux
.github/workflows/: release.yml
docs/: DESIGN.md
docs/superpowers/plans/: 2026-06-18-anka-grab-search.md  2026-06-18-anka-menu.md  2026-06-18-anka-session-management.md
docs/superpowers/specs/: 2026-06-18-anka-grab-search-design.md  2026-06-18-anka-menu-design.md  2026-06-18-anka-session-management-design.md
scripts/: install-binary.sh
src/: capture.rs  cli.rs  clip.rs  config.rs  daemon.rs  freeze.rs  grab.rs  main.rs  menu.rs  model.rs  picker.rs  process.rs  restore.rs  search.rs  session.rs  status.rs  store.rs  tmux.rs  tui.rs  url.rs
src/switcher/: mod.rs  state.rs  term.rs
tests/: daemon_integration.rs  freeze_integration.rs  pick_integration.rs  restore_integration.rs  session_integration.rs  switch_integration.rs
tests/common/: mod.rs
