[package]
name = "anka"
version = "0.12.2"
edition = "2021"
description = "Freeze and resurrect tmux sessions, exactly."
license = "MIT"
repository = "https://github.com/kenanpelit/tmux-anka"
authors = ["Kenan Pelit <kenanpelit@gmail.com>"]

[[bin]]
name = "anka"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
dirs = "5"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
